<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Campus Information System</string>
    <string name="apk_download_url">http://ccc-r309.vm.nthu.edu.tw/cis.apk</string>
    <string name="label_captcha">Captcha</string>
    <string name="label_session">Session</string>
    <string name="label_status">Status</string>
    <string name="label_keyword">Keyword</string>
    <string name="label_result">Result</string>
    <string name="label_author_info">SHIE, Li-Yi (lyshie) &lt;lyshie@mx.nthu.edu.tw&gt;</string>
    <string name="action_fetch">Fetch</string>
    <string name="action_login">Login</string>
    <string name="action_query">Query</string>
    <string name="msg_loading">Loading&#8230;</string>
    <string name="msg_failed">Failed!</string>
    <string name="msg_logged_in">Logged in!</string>
    <string name="msg_no_data">No data</string>
    <string name="msg_wifi_connected">WiFi "%s" connected!</string>
    <string name="msg_wifi_enabled">WiFi enabled!</string>
    <string name="title_activity_eip">EIP System</string>
    <string name="title_activity_edoc">EDoc System</string>
    <string name="title_activity_find_nthu">Find NTHU</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_update">Update</string>
    <string name="title_activity_cleanup">Cleanup</string>
    <string name="title_activity_mailing_list">Mailing List</string>
    <string name="title_activity_wifi">WiFi Autologin</string>
    <string name="pref_title_wifi_password">WiFi Password</string>
    <string name="label_ip">IP</string>
    <string name="click_to_open_edoc">Click to open Electronic Documents System</string>
    <string name="msg_yes">Yes</string>
    <string name="msg_no">No</string>
    <string name="msg_open_external_browser">Open external browser?</string>

</resources>